Fixed title cards to align with sales

--- a/app/static/assets/css/style.css
+++ b/app/static/assets/css/style.css
@@ -1353,5 +1353,10 @@ h6 {
     width: 100px;
 }
 
+.top {
+  text-align: center;
+  width: 100%;
+}
+
 
 
